[doc]: update Thailand trip journal.

--- a/_posts/2023-06-23-Thailand.markdown
+++ b/_posts/2023-06-23-Thailand.markdown
@@ -139,17 +139,16 @@ comments: false
 </p>
 
 <blockquote>
-<p>接下来的行程安排是曼谷的经典景点——大皇宫和卧佛寺，亲眼见到那些金碧辉煌的建筑，真的比照片上还要震撼。然后，再去郑王庙（Wat Arun）。</p>
+<p>接下来的行程安排是曼谷的经典景点——大皇宫与郑王庙（Wat Arun），亲眼所见的实物感真的比照片上还要震撼。</p>
 </blockquote>
 
 <blockquote>
+<p><strong>补充介绍：</strong></p>
 <p>
-补充介绍：
-**大皇宫（Grand Palace）**：建于1782年的大皇宫，是泰国历代王室的居所，也是泰国建筑艺术的瑰宝。它融合了泰式、欧洲和中式风格，金碧辉煌，气势恢宏。其中最引人注目的是玉佛寺（Wat Phra Kaew），这里供奉着泰国最神圣的玉佛。
-
-**卧佛寺（Wat Pho）**：作为泰国最古老、规模最大的寺庙之一，卧佛寺以其巨大的金色卧佛闻名于世。这尊卧佛全长46米，高15米，静静地侧卧在寺庙中，象征着佛祖涅槃时的宁静与安详。
-
-**郑王庙（Wat Arun）**：也被称为“黎明寺”，是曼谷最具标志性的寺庙之一。它的历史可以追溯到泰国的大城王朝时期，后来在拉玛二世时期进行了大规模重建。寺庙的名字“黎明”来源于印度黎明之神阿鲁纳（Aruna），象征着希望与新生。郑王庙最引人注目的是它高耸的中央塔楼，表面镶嵌着无数彩色陶瓷片，在阳光下熠熠生辉。这座寺庙不仅是一座宗教建筑，更是泰国历史与文化的象征。
+<strong>大皇宫（Grand Palace）</strong>：建于1782年的大皇宫，是泰国历代王室的居所，也是泰国建筑艺术的瑰宝。它融合了泰式、欧洲和中式风格，金碧辉煌，气势恢宏。其中最引人注目的是玉佛寺（Wat Phra Kaew），这里供奉着泰国最神圣的玉佛。
+</p>
+<p>
+<strong>郑王庙（Wat Arun）</strong>：也被称为“黎明寺”，是曼谷最具标志性的寺庙之一。它的历史可以追溯到泰国的大城王朝时期，后来在拉玛二世时期进行了大规模重建。寺庙的名字“黎明”来源于印度黎明之神阿鲁纳（Aruna），象征着希望与新生。郑王庙最引人注目的是它高耸的中央塔楼，表面镶嵌着无数彩色陶瓷片，在阳光下熠熠生辉。这座寺庙不仅是一座宗教建筑，更是泰国历史与文化的象征。
 </p>
 </blockquote>
 
