--- a/_posts/2023-06-23-Thailand.markdown
+++ b/_posts/2023-06-23-Thailand.markdown
@@ -210,6 +210,14 @@ comments: false
 </p>
 </blockquote>
 
+<p>
+<video width="680" height="420" controls>
+  <source src="{{ site.baseurl }}/img/journal/Thailand/video002.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+<figcaption style="font-size: 14px; color: gray;">微醺后与表姐们漫步在街道上</figcaption>
+</p>
+
 
 
 <!-- EXTRA INFO -->
